Fix display issue on Chrome on blog spacing
I changed gap to margin-right. For some reason chrome wasn't adding
spacing between the grid columns, wheras firefox did. Margin
makes more sense here anyways.

--- a/style.css
+++ b/style.css
@@ -15,7 +15,10 @@ html {
 
 .posts {
     display: flex;
-    gap: 1rem;
+}
+
+.life {
+    margin-right: 1rem;
 }
 
 @media (max-width:1010px) {
@@ -23,3 +26,4 @@ html {
         flex-direction: column;
     }
 }
+
